<resources>
    <string name="app_name">TmsFalcon</string>
    <string name="hint_username"> Username</string>
    <string name="hint_password"> Password</string>
    <string name="login_text">Login</string>
    <string name="submit_text">Submit</string>
    <string name="forgot_password_text">Forgot Password ?</string>
    <string name="network_error">Please Connect to the Internet Connection.</string>
    <string name="username_error">Username cannot be blank.</string>
    <string name="password_error">Password cannot be blank.</string>
    <string name="null_response">No Response</string>
    <string name="malformed_json">Could not parse malformed JSON</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_successful">Login Successful.</string>
    <string name="login_db_error">Some Error Occurred while inserting data to db.</string>
    <string name="backtologin">Back to Login</string>
    <string name="title_activity_should_update_password">ShouldUpdatePassword</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password_error">New Password Field is Required</string>
    <string name="confirm_password_error">Confirm Password Field is Required</string>
    <string name="should_update_password_text_view">Please Update Your Password First.</string>
    <string name="password_equality_error">Confirm Password must Match New Password.</string>
    <string name="company_name">Company Name<font color="#FFFFFF">*</font></string>
    <string name="company_address">Company Address</string>
    <string name="company_ein">Company Ein</string>
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="dob">Date Of Birth</string>
    <string name="email">Email<font color="#FFFFFF">*</font></string>
    <string name="type">Type<font color="#FFFFFF">*</font></string>
    <string name="type_plane">Type</string>
    <string name="mc_no">MC No<font color="#FFFFFF">*</font></string>
    <string name="dl">DL</string>
    <string name="dl_state">DL State</string>
    <string name="dl_expiration">DL Expiration</string>
    <string name="home_phone">Home Phone</string>
    <string name="address">Address<font color="#FFFFFF">*</font></string>
    <string name="address_detail">City,State,Zipcode</string>
    <string name="home_address">Home Address<font color="#FFFFFF">*</font></string>
    <string name="mailing_address">Mailing Address<font color="#FFFFFF">*</font></string>
    <string name="emergency_contact_person"> Contact Person</string>
    <string name="emergency_contact_relation"> Contact Relation</string>
    <string name="emergency_contact_cell"> Phone Number</string>
    <string name="general_information">General Information</string>
    <string name="company_information">Company Information</string>
    <string name="driving_information">Driving License Information</string>
    <string name="emergency_contact_information">Emergency Contact Information</string>
    <string name="employer_name">Employer Name </string>
    <string name="position">Position </string>
    <string name="duration">Duration </string>
    <string name="equipment_type">Equipment type  </string>
    <string name="equipment_class">Equipment Class  </string>
    <string name="total_miles">Total Miles  </string>
    <string name="conviction_date">Conviction Date </string>
    <string name="location">Location </string>
    <string name="charge">Charge </string>
    <string name="penalty">Penalty </string>
    <string name="accident_nature">Accident Nature </string>
    <string name="accident_date">Accident Date </string>
    <string name="fatalities">Fatalities </string>
    <string name="injuries">Injuries </string>
    <string name="fax">Fax </string>
    <string name="salary">Salary </string>
    <string name="leaving_reason">Leaving Reason </string>
    <string name="mc">MC </string>
    <string name="resources">Resources</string>
    <string name="trucks">Trucks</string>
    <string name="trailers">Trailers</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_truck_detail">Truck Detail</string>
    <string name="unit_no">Unit No<font color="#FFFFFF">*</font></string>
    <string name="current_location">Current Location</string>
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="year">Year</string>
    <string name="color">Color</string>
    <string name="license_plate_number">License Plate Number</string>
    <string name="license_expiration">License Expiration</string>
    <string name="resgistered_state">Registered State</string>
    <string name="city_state">City/State</string>
    <string name="zipcode">Zipcode<font color="#FFFFFF">*</font></string>
    <string name="available_date">Available Date</string>
    <string name="latitude_longitude">Latitude/Longitude</string>
    <string name="location_">Location</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="trailer_details">Trailer Details</string>
    <string name="truck_basic">Truck Profile Details</string>
    <string name="vin">VIN</string>
    <string name="serial_number">Serial Number</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="no_of_axles">No of Axles</string>
    <string name="gross_weight">Gross Weight</string>
    <string name="current_odometer">Current Odometer</string>
    <string name="current_ewh">Current EWH</string>
    <string name="tank_capacity">Tank Capacity</string>
    <string name="tank_reserve">Tank Reserve</string>
    <string name="front_tyre_size">Front Tyre Size</string>
    <string name="rear_tyre_size">Rear Tyre Size</string>
    <string name="description">Description<font color="#FFFFFF">*</font></string>
    <string name="description_plane">Description</string>
    <string name="damage_description">Damage Description<font color="#FFFFFF">*</font></string>
    <string name="insurance_details">Insurance Details</string>
    <string name="insurance_name">Insurance Name</string>
    <string name="insurance_expiration">Insurance Expiration</string>
    <string name="insurance_policy_name">Insurance Company Name<font color="#FFFFFF">*</font></string>
    <string name="excluded_state">Excluded State</string>
    <string name="weight_capacity">Weight Capacity</string>
    <string name="title_activity_trailer_detail">Trailer Detail</string>
    <string name="trailer_basic">Trailer Profile Details</string>
    <string name="trailer_group">Trailer Group</string>
    <string name="trailer_type">Trailer Type</string>
    <string name="max_weight">Max Weight</string>
    <string name="max_pallets">Max Pallets</string>
    <string name="length">Length</string>
    <string name="length_dimension">Length Dimension</string>
    <string name="width">Width</string>
    <string name="width_dimension">Width Dimension</string>
    <string name="tyre_size_width">Tyre Size (Tyre Width)</string>
    <string name="tyre_size_section_height">Tyre Size (Section Height)</string>
    <string name="tyre_size_rim_diameter">Tyre Size (Rim Diameter)</string>
    <string name="view">View</string>
    <string name="document_name">Name</string>
    <string name="document_type">Type</string>
    <string name="document_tracking">Tracking</string>
    <string name="close">Close</string>
    <string name="name">Name<font color="#FFFFFF">*</font></string>
    <string name="phone_no">Phone No.<font color="#FFFFFF">*</font></string>
    <string name="alternative_fax">Alternative Fax</string>
    <string name="state_country">State/Country</string>
    <string name="day_off_request">Day Off Request</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="full_day">Full Day</string>
    <string name="half_day">Half Day</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="day_off_type">Off Type</string>
    <string name="date_error">Date is Required.</string>
    <string name="reason_error">Reason is Required.</string>
    <string name="start_time_error">Start Time is Required.</string>
    <string name="end_time_error">End Time is Required.</string>
    <string name="loans">Loans</string>
    <string name="start_date">Start Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="down_payment">Down Payment</string>
    <string name="last_installment">Last Installment</string>
    <string name="installment_amount">Installment Amount</string>
    <string name="installments">Installments</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="notes">Notes</string>
    <string name="payment_schedule">Payment Schedule</string>
    <string name="fuel_rebates">Fuel Rebates</string>
    <string name="capture_document">Capture Document</string>
    <string name="next_without_exclamation">Next</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="dispatch">Dispatch</string>
    <string name="my_loads">My Loads</string>
    <string name="profile">Profile</string>
    <string name="phone">Phone</string>
    <string name="make_a_call">Make A Call</string>
    <string name="select_document_type">Please Select Document Type</string>
    <string name="load">Load</string>
    <string name="driver">Driver</string>
    <string name="truck">Truck</string>
    <string name="trailer">Trailer</string>
    <string name="get_types">Get Types</string>
    <string name="shortcut_disabled_message">This Shortcut is disabled.</string>
    <string name="settlements">Settlements</string>
    <string name="escrow_acounts">Escrow Accounts</string>
    <string name="accounting">Accounting</string>
    <string name="get_cash">Get Cash</string>
    <string name="about">About</string>
    <string name="report_accident_incident">Report Accident/Incident</string>
    <string name="accident_report">Accident Report</string>
    <string name="step_five">Step 5</string>
    <string name="step_six">Step 6</string>
    <string name="step_seven">Step 7</string>
    <string name="gather_witness_information">Gather Witness Information</string>
    <string name="accident_module_screen_five_line_one">Collect the names and phone numbers of witnesses.</string>
    <string name="accident_module_screen_five_line_two">Ask them what they saw and write down their description.</string>
    <string name="collect_information">Collect Information</string>
    <string name="accident_module_screen_four_line_one">Collect information about the truck driver, including his name, address, phone number, operator license number, state of license, insurance provider, insurance policy number, the truck’s DOT number, vehicle license plate number and vehicle registration.</string>
    <string name="accident_module_screen_four_line_two">Also collect name, contact information, and insurer information for the truck owner and the truck driver’s employer.</string>
    <string name="report_accident_insurance_company">Report Accident Insurance Company</string>
    <string name="accident_module_screen_seven_line_one">Report the accident to your insurance company for towing/storing your vehicle, obtaining a rental replacement and arranging for repairs.</string>
    <string name="accident_module_screen_seven_line_two">Note where your vehicle will be taken to, if possible. Preserve your car, if you can; it can be important evidence.</string>
</resources>