<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/dashboard_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />

    </group>
    <group
        android:id="@+id/profile_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

    </group>


    <!--<group android:checkableBehavior="single">

        <item
            android:id="@+id/company"
            android:icon="@drawable/company"
            android:title="@string/company" />

    </group>-->
    <group
        android:id="@+id/dispatch_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/dispatcher"
            android:icon="@drawable/ic_aspect_ratio_black_24dp"
            android:title="@string/dispatch" />

    </group>

    <group
        android:id="@+id/settlement_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/driver_settlements"
            android:icon="@drawable/ic_document_box"
            android:title="@string/settlements" />

    </group>


    <group
        android:id="@+id/report_accident_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/report_accident"
            android:icon="@drawable/ic_warning_black_24dp"
            android:title="@string/accident_report" />

        <!-- <item
             android:id="@+id/offline_reported_accidents"
             android:icon="@drawable/ic_cloud_off_black_24dp"
             android:title="@string/offline_reported_accidents" />-->

    </group>
<!--    <group-->
<!--        android:id="@+id/day_off_request_group"-->
<!--        android:checkableBehavior="single">-->

<!--        <item-->
<!--            android:id="@+id/day_off_request"-->
<!--            android:icon="@drawable/ic_date_range_black_24dp"-->
<!--            android:title="@string/day_off_request" />-->

<!--    </group>-->
    <item android:title="@string/accounting" android:id="@+id/accounting">
        <menu android:id="@+id/accounting_menu">

            <item
                android:id="@+id/loans"
                android:icon="@drawable/ic_monetization_on_black_24dp"
                android:title="@string/loans" />

            <item
                android:id="@+id/fuel_rebates"
                android:icon="@drawable/ic_local_gas_station_black_24dp"
                android:title="@string/fuel_rebates" />

            <item
                android:id="@+id/escrow_accounts"
                android:icon="@drawable/ic_account_balance_black_24dp"
                android:title="@string/escrow_acounts" />
            <item
                android:id="@+id/get_cash"
                android:icon="@drawable/ic_monetization_on_black_24dp"
                android:title="@string/get_cash" />
        </menu>

    </item>

    <!--<group
        android:id="@+id/load_board_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/load_board"
            android:icon="@drawable/ic_aspect_ratio_black_24dp"
            android:title="@string/load_board" />

    </group>-->




   <!-- <group
        android:id="@+id/rc_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/rc_embed"
            android:icon="@drawable/ic_menu_phone"
            android:title="@string/rc_embed" />

    </group>-->
<!--    <group-->
<!--        android:id="@+id/capture_doc_group"-->
<!--        android:checkableBehavior="single">-->

<!--        <item-->
<!--            android:id="@+id/direct_upload"-->
<!--            android:icon="@drawable/ic_cloud_upload_black_24dp"-->
<!--            android:title="@string/capture_document" />-->

<!--    </group>-->

    <item android:title="@string/resources" android:id="@+id/resources">
        <menu android:id="@+id/resources_menu">
            <item
                android:id="@+id/resources_trucks"
                android:icon="@drawable/ic_truck"
                android:title="@string/trucks" />
            <item
                android:id="@+id/resources_trailers"
                android:icon="@drawable/ic_trailer"
                android:title="@string/trailers" />

            <item
                android:id="@+id/phone"
                android:icon="@drawable/ic_menu_phone"
                android:title="@string/phone" />
           <!-- <item
                android:id="@+id/contacts"
                android:icon="@drawable/menu_contacts"
                android:title="@string/contacts" />-->
        </menu>
    </item>
    <group
        android:id="@+id/about_us_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/about_us"
            android:iconTint="@color/blackOlive"
            android:icon="@drawable/history"
            android:title="@string/about" />

    </group>
<!--    <group-->
<!--        android:id="@+id/report_issue_group"-->
<!--        android:checkableBehavior="single">-->

<!--        <item-->
<!--            android:id="@+id/report_issue"-->
<!--            android:icon="@drawable/ic_error_outline"-->
<!--            android:title="@string/report_issue" />-->

<!--    </group>-->

    <group
        android:id="@+id/logout_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:title="@string/logout" />

    </group>

</menu>
