<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/capture_content_color">
    <!-- <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_capture_document"/>-->
    <!-- TODO: Update blank fragment layout -->


    <com.tmsfalcon.device.tmsfalcon.customtools.ZoomLinearLayout
        android:layout_width="match_parent"
        android:layout_above="@+id/next_btn"
        android:background="@color/capture_content_color_similar"
        android:id="@+id/zoom_linear_layout"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/text_14"
                android:textColor="@color/colorPrimary"
                android:text="@string/step_five"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_24"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/collect_information"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/light_greyish"
                android:textSize="@dimen/text_16"
                android:textAlignment="center"
                android:text="@string/accident_module_screen_four_line_one"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/light_greyish"
                android:textSize="@dimen/text_16"
                android:textAlignment="center"
                android:text="@string/accident_module_screen_four_line_two"/>


        </LinearLayout>

    </com.tmsfalcon.device.tmsfalcon.customtools.ZoomLinearLayout>



</RelativeLayout>
