<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/capture_content_color">
    <!-- <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_capture_document"/>-->
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/header_layout"
        android:background="@color/toolbar_background"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/timeline_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:tint="@color/white_greyish"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_warning_black_24dp" />
            <TextView
                android:id="@+id/header_text"
                android:paddingTop="10dp"
                android:textAllCaps="true"
                android:paddingBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_greyish"
                android:text="@string/report_accident_incident"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/timeline_line"/>
    </LinearLayout>


    <com.tmsfalcon.device.tmsfalcon.customtools.ZoomLinearLayout
            android:id="@+id/zoom_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_below="@id/header_layout"
            android:layout_above="@+id/next_btn"
            android:gravity="center"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/text_14"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/step_seven"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_24"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="@string/report_accident_insurance_company"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/light_greyish"
                    android:textSize="@dimen/text_16"
                    android:textAlignment="center"
                    android:text="@string/accident_module_screen_seven_line_one"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/light_greyish"
                    android:textSize="@dimen/text_16"
                    android:textAlignment="center"
                    android:text="@string/accident_module_screen_seven_line_two"/>
            </LinearLayout>


        </com.tmsfalcon.device.tmsfalcon.customtools.ZoomLinearLayout>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:textColor="@color/colorPrimary"
        android:background="@color/transparent"
        android:text="@string/next_without_exclamation"
        android:textSize="@dimen/text_18"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"/>

</RelativeLayout>
